docker-compose.yaml modification

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,5 +3,5 @@ spring.application.name=telegram-bot
 bot.token=${BOT_TOKEN}
 openai.token=${OPENAI_TOKEN}
 
-redis.host=${REDIS_HOST}
-redis.port=${REDIS_PORT}
+redis.host=redis
+redis.port=6379
