--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -3,7 +3,7 @@ services:
     image: redis:latest
     restart: unless-stopped
     ports:
-      - $REDIS_PORT:$REDIS_PORT
+      - "6379:6379"
 
   chatbot:
     depends_on:
@@ -12,11 +12,11 @@ services:
     restart: on-failure
     env_file: ./.env
     ports:
-      - $SPRING_PORT:$SPRING_PORT
+      - "8080:8080"
     environment:
       SPRING_APPLICATION_JSON: '{
-          "spring.redis.host" : "$REDIS_HOST",
-          "spring.redis.port" : "$REDIS_PORT"
+          "spring.redis.host" : "redis",
+          "spring.redis.port" : "6379"
         }'
     volumes:
       - .m2:/root/.m2
